<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmaci_n_de_cita"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingBottom="16dp"/>

    <TextView
        android:id="@+id/textViewDoctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/m_dico"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/textViewSpecialty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/especialidad"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha_y_hora"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/buttonConfirmAppointment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirma_cita"
        android:layout_marginTop="16dp"/>
</LinearLayout>
