<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detalles_de_la_cita"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingBottom="16dp"/>

    <TextView
        android:id="@+id/textViewDoctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/m_dico_seleccionado"
        android:textSize="16sp"/>

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"/>

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/buttonConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmar_cita"
        android:layout_marginTop="16dp"/>
</LinearLayout>
